--- a/src/vaadin-text-area.html
+++ b/src/vaadin-text-area.html
@@ -58,7 +58,6 @@ This program is available under Apache License Version 2.0, available at https:/
         font: inherit;
         font-size: 1em;
         line-height: normal;
-        color: inherit;
         background-color: transparent;
         box-shadow: none;
 
@@ -66,6 +65,7 @@ This program is available under Apache License Version 2.0, available at https:/
         overflow: hidden;
         width: 100%;
         height: 100%;
+        color: var(--lumo-body-text-color);
       }
 
       @supports (display: grid) {
