fix visual tests

--- a/src/vaadin-text-area.html
+++ b/src/vaadin-text-area.html
@@ -28,6 +28,11 @@ This program is available under Apache License Version 2.0, available at https:/
 
       [part="input-field"] {
         overflow: hidden;
+        align-items: flex-start;
+      }
+
+      [part="clear-button"] {
+        align-self: center;
       }
 
       [part="value"] {
