--- a/src/vaadin-text-area.html
+++ b/src/vaadin-text-area.html
@@ -68,7 +68,7 @@ This program is available under Apache License Version 2.0, available at https:/
 
       </div>
 
-      <div part="helper-text" on-click="focus" id="[[_helperTextId]]">
+      <div part="helper-text" id="[[_helperTextId]]">
         <slot name="helper">[[helperText]]</slot>
       </div>
 
