add box sizing border box for text area

--- a/theme/material/vaadin-text-area-styles.html
+++ b/theme/material/vaadin-text-area-styles.html
@@ -17,6 +17,7 @@
       .textarea-wrapper::after {
         padding: 0 0 8px;
         line-height: inherit;
+        box-sizing: border-box;
       }
 
       [part="input-field"] [part="value"],
