--- a/theme/lumo/vaadin-text-area-styles.html
+++ b/theme/lumo/vaadin-text-area-styles.html
@@ -28,12 +28,12 @@
         border: none;
       }
 
-      :host(:hover:not([readonly]):not([focused])) [part="input-field"] {
+      :host(:hover:not([readonly]):not([focused]):not([invalid])) [part="input-field"] {
         background-color: var(--lumo-contrast-20pct);
       }
 
       @media (pointer: coarse) {
-        :host(:hover:not([readonly]):not([focused])) [part="input-field"] {
+        :host(:hover:not([readonly]):not([focused]):not([invalid])) [part="input-field"] {
           background-color: var(--lumo-contrast-10pct);
         }
 
