--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -696,7 +696,7 @@ This program is available under Apache License Version 2.0, available at https:/
       this.$.clearButton.addEventListener('mousedown', () => this._valueClearing = true);
       this.$.clearButton.addEventListener('mouseleave', () => this._valueClearing = false);
       this.$.clearButton.addEventListener('click', this._onClearButtonClick.bind(this));
-      this.addEventListener('keydown', this._onKeyDown.bind(this));
+      this.addEventListener('keydown', e => this._onKeyDown(e));
 
       var uniqueId = Vaadin.TextFieldMixin._uniqueId = 1 + Vaadin.TextFieldMixin._uniqueId || 0;
       this._errorId = `${this.constructor.is}-error-${uniqueId}`;
