--- a/src/vaadin-text-area.html
+++ b/src/vaadin-text-area.html
@@ -158,6 +158,18 @@ This program is available under Apache License Version 2.0, available at https:/
           return '2.8.6';
         }
 
+        static get properties() {
+          return {
+            /**
+             * A regular expression that the value is checked against.
+             * The pattern must match the entire value, not just some subset.
+             */
+            pattern: {
+              type: String
+            }
+          };
+        }
+
         static get observers() {
           return [
             '_textAreaValueChanged(value)'
@@ -231,6 +243,33 @@ This program is available under Apache License Version 2.0, available at https:/
           inputField.scrollTop = scrollTop;
 
           this._dispatchIronResizeEventIfNeeded('InputHeight', inputHeight);
+        }
+
+        /**
+         * Returns true if the current textarea value satisfies all constraints (if any).
+         * @return {boolean}
+         */
+        checkValidity() {
+          if (!super.checkValidity()) {
+            return false;
+          }
+
+          // Native <textarea> does not support pattern attribute, so we have a custom logic
+          // according to WHATWG spec for <input>, with tests inspired by web-platform-tests
+          // https://html.spec.whatwg.org/multipage/input.html#the-pattern-attribute
+
+          if (!this.pattern || !this.inputElement.value) {
+            // Mark as valid if there is no pattern, or the value is empty
+            return true;
+          }
+
+          try {
+            const match = this.inputElement.value.match(this.pattern);
+            return match ? match[0] === match.input : false;
+          } catch (_) {
+            // If the pattern can not be compiled, then report as valid
+            return true;
+          }
         }
 
         /**
