--- a/theme/material/vaadin-text-area-styles.html
+++ b/theme/material/vaadin-text-area-styles.html
@@ -19,6 +19,11 @@
         white-space: pre-wrap; /* override `nowrap` from <vaadin-text-field> */
         align-self: stretch; /* override `baseline` from <vaadin-text-field> */
       }
+
+      [part='input-field']::before,
+      [part='input-field']::after {
+        bottom: calc(var(--_text-area-vertical-scroll-position) * -1);
+      }
     </style>
   </template>
 </dom-module>
