--- a/test/text-area.html
+++ b/test/text-area.html
@@ -417,6 +417,67 @@
       });
     });
 
+
+    describe('--_text-area-vertical-scroll-position CSS variable', () => {
+      let textArea, inputField;
+
+      function wheel({element = inputField, deltaY = 0}) {
+        const e = new CustomEvent('wheel', {bubbles: true, cancelable: true});
+        e.deltaY = deltaY;
+        e.deltaX = 0;
+        element.dispatchEvent(e);
+        return e;
+      }
+
+      function getVerticalScrollPosition() {
+        if (window.ShadyCSS) {
+          return window.ShadyCSS.getComputedStyleValue(textArea, '--_text-area-vertical-scroll-position');
+        } else {
+          return getComputedStyle(textArea).getPropertyValue('--_text-area-vertical-scroll-position');
+        }
+      }
+
+      beforeEach(() => {
+        textArea = fixture(`default`);
+        inputField = textArea.root.querySelector('[part=input-field]');
+        textArea.style.height = '100px';
+        textArea.value = 'a\nb\nc\nd\ne\nf\ng\nh\ni\nj\nk\nl\nm\nn\no\np\nq\nr\ns\nt\nu\nv\nw\nx\ny\nz';
+      });
+
+      it('should be 0 initially', () => {
+        expect(getVerticalScrollPosition()).to.equal('0px');
+      });
+
+      it('should update value on scroll', async() => {
+        inputField.scrollTop = 10;
+        await nextFrame();
+        expect(getVerticalScrollPosition()).to.equal('10px');
+      });
+
+      it('should update value on wheel', async() => {
+        wheel({deltaY: 10});
+        expect(getVerticalScrollPosition()).to.equal('10px');
+      });
+
+      it('should scroll on wheel', async() => {
+        wheel({deltaY: 10});
+        expect(inputField.scrollTop).to.equal(10);
+      });
+
+      it('should cancel wheel event', () => {
+        const e = wheel({deltaY: 10});
+        expect(e.defaultPrevented).to.be.true;
+      });
+
+      it('should update value on resize', async() => {
+        inputField.scrollTop = 10;
+        await nextFrame();
+        textArea.style.height = `${inputField.scrollHeight}px`;
+        await nextFrame();
+        expect(getVerticalScrollPosition()).to.equal('0px');
+      });
+    });
+
     describe('pattern', () => {
       // eslint-disable-next-line max-len
       // https://github.com/web-platform-tests/wpt/blob/7b0ebaccc62b566a1965396e5be7bb2bc06f841f/html/semantics/forms/constraints/form-validation-validity-patternMismatch.html
