--- a/test/text-area.html
+++ b/test/text-area.html
@@ -450,7 +450,7 @@
 
       it('should update value on scroll', async() => {
         inputField.scrollTop = 10;
-        await nextFrame();
+        await oneEvent(inputField, 'scroll');
         expect(getVerticalScrollPosition()).to.equal('10px');
       });
 
@@ -471,9 +471,9 @@
 
       it('should update value on resize', async() => {
         inputField.scrollTop = 10;
-        await nextFrame();
+        await oneEvent(inputField, 'scroll');
         textArea.style.height = `${inputField.scrollHeight}px`;
-        await nextFrame();
+        await oneEvent(inputField, 'scroll');
         expect(getVerticalScrollPosition()).to.equal('0px');
       });
     });
