fix: position the material text-area bottom bar (CP) (#589)

--- a/test/helpers.html
+++ b/test/helpers.html
@@ -6,4 +6,8 @@
     };
     element.addEventListener(eventName, listener);
   };
+
+  window.oneEvent = (element, eventName) => {
+    return new Promise((resolve) => listenOnce(element, eventName, resolve));
+  };
 </script>
