--- a/src/vaadin-text-area.html
+++ b/src/vaadin-text-area.html
@@ -187,9 +187,13 @@ This program is available under Apache License Version 2.0, available at https:/
           // event, scrolling manually and then synchronously updating the scroll position CSS variable
           // allows us to avoid some jumpy behavior that would occur on wheel otherwise.
           this._inputField.addEventListener('wheel', (e) => {
-            e.preventDefault();
+            const scrollTopBefore = this._inputField.scrollTop;
             this._inputField.scrollTop += e.deltaY;
-            this.__scrollPositionUpdated();
+
+            if (scrollTopBefore !== this._inputField.scrollTop) {
+              e.preventDefault();
+              this.__scrollPositionUpdated();
+            }
           });
 
           this.__scrollPositionUpdated();
