--- a/test/email-field.html
+++ b/test/email-field.html
@@ -70,6 +70,30 @@
       });
 
       describe('validation', () => {
+        describe('events', () => {
+          it('should fire a validated event on validation success', () => {
+            const validatedSpy = sinon.spy();
+            emailField.addEventListener('validated', validatedSpy);
+            emailField.validate();
+
+            expect(validatedSpy.calledOnce).to.be.true;
+            const event = validatedSpy.firstCall.args[0];
+            expect(event.detail.valid).to.be.true;
+          });
+
+          it('should fire a validated event on validation failure', () => {
+            const validatedSpy = sinon.spy();
+            emailField.addEventListener('validated', validatedSpy);
+            emailField.required = true;
+            emailField.validate();
+
+            expect(validatedSpy.calledOnce).to.be.true;
+            const event = validatedSpy.firstCall.args[0];
+            expect(event.detail.valid).to.be.false;
+          });
+
+        });
+
         describe('valid email addresses', () => {
           validAddresses.map(address => {
             it(address, () => {
