--- a/test/validation.html
+++ b/test/validation.html
@@ -216,6 +216,27 @@
             expect(tf.invalid).to.be.false;
           });
 
+          it('should fire a validated event on validation success', () => {
+            const validatedSpy = sinon.spy();
+            tf.addEventListener('validated', validatedSpy);
+            tf.validate();
+
+            expect(validatedSpy.calledOnce).to.be.true;
+            const event = validatedSpy.firstCall.args[0];
+            expect(event.detail.valid).to.be.true;
+          });
+
+          it('should fire a validated event on validation failure', () => {
+            const validatedSpy = sinon.spy();
+            tf.addEventListener('validated', validatedSpy);
+            tf.required = true;
+            tf.validate();
+
+            expect(validatedSpy.calledOnce).to.be.true;
+            const event = validatedSpy.firstCall.args[0];
+            expect(event.detail.valid).to.be.false;
+          });
+
           describe(`prevent invalid input ${condition}`, function() {
 
             beforeEach(function() {
