fix: prevent initial validation when the field is initialized as invalid

--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -480,7 +480,7 @@ This program is available under Apache License Version 2.0, available at https:/
      */
     _valueChanged(newVal, oldVal) {
       // setting initial value to empty string, skip validation
-      if (newVal === '' && oldVal === undefined) {
+      if (oldVal === undefined) {
         return;
       }
 
