backport should set invalid

--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -618,7 +618,7 @@ This program is available under Apache License Version 2.0, available at https:/
       }
 
       if (!required && !minlength && !maxlength && !pattern) {
-        this.invalid = false;
+        this._setInvalid(false);
       } else {
         this.validate();
       }
@@ -713,6 +713,27 @@ This program is available under Apache License Version 2.0, available at https:/
     }
 
     /**
+     * @param {boolean} invalid
+     * @protected
+     */
+    _setInvalid(invalid) {
+      if (this._shouldSetInvalid(invalid)) {
+        this.invalid = invalid;
+      }
+    }
+
+    /**
+     * Override this method to define whether the given `invalid` state should be set.
+     *
+     * @param {boolean} _invalid
+     * @return {boolean}
+     * @protected
+     */
+    _shouldSetInvalid(_invalid) {
+      return true;
+    }
+  
+    /**
      * Returns true if `value` is valid.
      * `<iron-form>` uses this to check the validity for all its elements.
      *
@@ -720,7 +741,7 @@ This program is available under Apache License Version 2.0, available at https:/
      */
     validate() {
       const isValid = this.checkValidity();
-      this.invalid = !isValid;
+      this._setInvalid(!isValid);
       this.dispatchEvent(new CustomEvent('validated', {detail: {valid: isValid}}));
       return isValid;
     }
