--- a/test/validation.html
+++ b/test/validation.html
@@ -12,7 +12,9 @@
   <link rel="import" href="../vaadin-password-field.html">
   <link rel="import" href="../vaadin-text-area.html">
   <link rel="import" href="../vaadin-text-field.html">
+  <link rel="import" href="../vaadin-integer-field.html">
   <link rel="import" href="../../iron-form/iron-form.html">
+  <script src="invalid-common.js"></script>
 
 </head>
 
@@ -356,6 +358,119 @@
           });
         });
 
+      });
+    });
+
+    describe('invalid cannot be set to false', () => {
+      let element;
+
+      function nextRender(element) {
+        return new Promise(resolve => {
+          Polymer.RenderStatus.afterNextRender(element, resolve);
+        });
+      }
+
+      describe('text-field invalid', () => {
+        beforeEach(async() => {
+          element = fixtureSync('<vaadin-text-field></vaadin-text-field>');
+          element._shouldSetInvalid = (invalid) => invalid;
+          await nextRender();
+        });
+
+
+        it('should set invalid only when it is true', async() => {
+          element.required = true;
+          element.validate();
+          expect(element.invalid).to.be.true;
+          element.value = 'value';
+          element.validate();
+          expect(element.invalid).to.be.true;
+        });
+      });
+
+      describe('text-area invalid', () => {
+        beforeEach(async() => {
+          element = fixtureSync('<vaadin-text-area></vaadin-text-area>');
+          element._shouldSetInvalid = (invalid) => invalid;
+          await nextRender();
+        });
+
+        it('should set invalid only when it is true', async() => {
+          element.required = true;
+          element.validate();
+          expect(element.invalid).to.be.true;
+          element.value = 'value';
+          element.validate();
+          expect(element.invalid).to.be.true;
+        });
+      });
+
+      describe('email-field invalid', () => {
+        beforeEach(async() => {
+          element = fixtureSync('<vaadin-email-field></vaadin-email-field>');
+          element._shouldSetInvalid = (invalid) => invalid;
+          await nextRender();
+        });
+
+        it('should set invalid only when it is true', async() => {
+          element.required = true;
+          element.validate();
+          expect(element.invalid).to.be.true;
+          element.value = 'value';
+          element.validate();
+          expect(element.invalid).to.be.true;
+        });
+      });
+
+      describe('number-field invalid', () => {
+        beforeEach(async() => {
+          element = fixtureSync('<vaadin-number-field></vaadin-number-field>');
+          element._shouldSetInvalid = (invalid) => invalid;
+          await nextRender();
+        });
+
+        it('should set invalid only when it is true', async() => {
+          element.required = true;
+          element.validate();
+          expect(element.invalid).to.be.true;
+          element.value = 'value';
+          element.validate();
+          expect(element.invalid).to.be.true;
+        });
+      });
+
+      describe('password-field invalid', () => {
+        beforeEach(async() => {
+          element = fixtureSync('<vaadin-password-field></vaadin-password-field>');
+          element._shouldSetInvalid = (invalid) => invalid;
+          await nextRender();
+        });
+
+        it('should set invalid only when it is true', async() => {
+          element.required = true;
+          element.validate();
+          expect(element.invalid).to.be.true;
+          element.value = 'value';
+          element.validate();
+          expect(element.invalid).to.be.true;
+        });
+      });
+
+      describe('integer-field invalid', () => {
+        beforeEach(async() => {
+          element = fixtureSync('<vaadin-integer-field></vaadin-integer-field>');
+          element._shouldSetInvalid = (invalid) => invalid;
+          await nextRender();
+        });
+
+        it('should set invalid only when it is true', async() => {
+          element.required = true;
+          element.validate();
+          expect(element.invalid).to.be.true;
+          element.value = 'value';
+          element.validate();
+          expect(element.invalid).to.be.true;
+        });
       });
     });
   </script>
