--- a/test/integer-field-validation.html
+++ b/test/integer-field-validation.html
@@ -6,12 +6,7 @@
 
     <script src="../../web-component-tester/browser.js"></script>
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-    <link rel="import" href="../../test-fixture/test-fixture.html">
-    <link rel="import" href="../vaadin-email-field.html">
-    <link rel="import" href="../vaadin-number-field.html">
-    <link rel="import" href="../vaadin-password-field.html">
-    <link rel="import" href="../vaadin-text-area.html">
-    <link rel="import" href="../vaadin-text-field.html">
+    <link rel="import" href="../vaadin-integer-field.html">
     <link rel="import" href="../../iron-form/iron-form.html">
     <link rel="import" href="helpers.html">
 </head>
