--- a/test/helpers.html
+++ b/test/helpers.html
@@ -1,3 +1,9 @@
+<!doctype html>
+
+<head>
+  <link rel="import" href="../../polymer/polymer.html">
+</head>
+<body>
 <script>
   window.listenOnce = (element, eventName, callback) => {
     const listener = e => {
@@ -17,3 +23,4 @@
     });
   };
 </script>
+</body>
