--- a/test/integer-field-validation.html
+++ b/test/integer-field-validation.html
@@ -1,20 +1,19 @@
 <!doctype html>
 
 <head>
-    <meta charset="UTF-8">
-    <title>vaadin-text-field tests</title>
+  <meta charset="UTF-8">
+  <title>vaadin-text-field tests</title>
 
-    <script src="../../web-component-tester/browser.js"></script>
-    <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-    <link rel="import" href="../vaadin-integer-field.html">
-    <link rel="import" href="../../iron-form/iron-form.html">
-    <link rel="import" href="helpers.html">
+  <script src="../../web-component-tester/browser.js"></script>
+  <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
+  <link rel="import" href="../vaadin-integer-field.html">
+  <link rel="import" href="helpers.html">
 </head>
 
 <body>
 <script>
   var el = 'vaadin-integer-field';
-  describe(`${el}: initial validation`, () => {
+  describe(`initial validation`, () => {
     let field, validateSpy;
 
     beforeEach(() => {
