--- a/test/password-field-validation.html
+++ b/test/password-field-validation.html
@@ -1,57 +1,51 @@
 <!doctype html>
 
 <head>
-    <meta charset="UTF-8">
-    <title>vaadin-text-field tests</title>
+  <meta charset="UTF-8">
+  <title>vaadin-text-field tests</title>
 
-    <script src="../../web-component-tester/browser.js"></script>
-    <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-    <link rel="import" href="../../test-fixture/test-fixture.html">
-    <link rel="import" href="../vaadin-email-field.html">
-    <link rel="import" href="../vaadin-number-field.html">
-    <link rel="import" href="../vaadin-password-field.html">
-    <link rel="import" href="../vaadin-text-area.html">
-    <link rel="import" href="../vaadin-text-field.html">
-    <link rel="import" href="../../iron-form/iron-form.html">
-    <link rel="import" href="helpers.html">
+  <script src="../../web-component-tester/browser.js"></script>
+  <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
+  <link rel="import" href="../vaadin-password-field.html">
+  <link rel="import" href="helpers.html">
 </head>
 
 <body>
 <script>
-    var el = 'vaadin-password-field';
-    describe(`${el}: initial validation`, () => {
-      let field, validateSpy;
+  var el = 'vaadin-password-field';
+  describe(`initial validation`, () => {
+    let field, validateSpy;
 
-      beforeEach(() => {
-        field = document.createElement(el);
-        validateSpy = sinon.spy(field, 'validate');
-      });
-
-      afterEach(() => {
-        field.remove();
-      });
-
-      it('should not validate by default', async() => {
-        document.body.appendChild(field);
-        await nextRender();
-        expect(validateSpy.called).to.be.false;
-      });
-
-      it('should not validate when the field has an initial value', async() => {
-        field.value = 'foo@example.com';
-        document.body.appendChild(field);
-        await nextRender();
-        expect(validateSpy.called).to.be.false;
-      });
-
-      it('should not validate when the field has an initial value and invalid', async() => {
-        field.value = 'foo@example.com';
-        field.invalid = true;
-        document.body.appendChild(field);
-        await nextRender();
-        expect(validateSpy.called).to.be.false;
-      });
+    beforeEach(() => {
+      field = document.createElement(el);
+      validateSpy = sinon.spy(field, 'validate');
     });
+
+    afterEach(() => {
+      field.remove();
+    });
+
+    it('should not validate by default', async() => {
+      document.body.appendChild(field);
+      await nextRender();
+      expect(validateSpy.called).to.be.false;
+    });
+
+    it('should not validate when the field has an initial value', async() => {
+      field.value = 'foo@example.com';
+      document.body.appendChild(field);
+      await nextRender();
+      expect(validateSpy.called).to.be.false;
+    });
+
+    it('should not validate when the field has an initial value and invalid', async() => {
+      field.value = 'foo@example.com';
+      field.invalid = true;
+      document.body.appendChild(field);
+      await nextRender();
+      expect(validateSpy.called).to.be.false;
+    });
+  });
 </script>
 </body>
 
