--- a/test/password-field-validation.html
+++ b/test/password-field-validation.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>vaadin-text-field tests</title>
+  <title>vaadin-password-field validation tests</title>
 
   <script src="../../web-component-tester/browser.js"></script>
   <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
