--- a/test/password-field-validation.html
+++ b/test/password-field-validation.html
@@ -12,12 +12,11 @@
 
 <body>
 <script>
-  var el = 'vaadin-password-field';
   describe(`initial validation`, () => {
     let field, validateSpy;
 
     beforeEach(() => {
-      field = document.createElement(el);
+      field = document.createElement('vaadin-password-field');
       validateSpy = sinon.spy(field, 'validate');
     });
 
@@ -32,14 +31,14 @@
     });
 
     it('should not validate when the field has an initial value', async() => {
-      field.value = 'foo@example.com';
+      field.value = 'Initial Value';
       document.body.appendChild(field);
       await nextRender();
       expect(validateSpy.called).to.be.false;
     });
 
     it('should not validate when the field has an initial value and invalid', async() => {
-      field.value = 'foo@example.com';
+      field.value = 'Initial Value';
       field.invalid = true;
       document.body.appendChild(field);
       await nextRender();
