added validated event and tests

--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -713,13 +713,17 @@ This program is available under Apache License Version 2.0, available at https:/
     }
 
     /**
-     * Returns true if `value` is valid.
-     * `<iron-form>` uses this to check the validity for all its elements.
+     * Validates the field and sets the `invalid` property based on the result.
+     *
+     * The method fires a `validated` event with the result of the validation.
      *
      * @return {boolean} True if the value is valid.
      */
     validate() {
-      return !(this.invalid = !this.checkValidity());
+      const isValid = this.checkValidity();
+      this.invalid = !isValid;
+      this.dispatchEvent(new CustomEvent('validated', {detail: {valid: isValid}}));
+      return isValid;
     }
 
     clear() {
