--- a/test/email-field-validation.html
+++ b/test/email-field-validation.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+  <test-fixture id="default">
+    <template>
+      <vaadin-email-field></vaadin-email-field>
+    </template>
+  </test-fixture>
 <script>
   describe(`initial validation`, () => {
     let field, validateSpy;
@@ -43,6 +48,38 @@
       document.body.appendChild(field);
       await nextRender();
       expect(validateSpy.called).to.be.false;
+    });
+  });
+  describe('basic', () => {
+    let emailField;
+
+    beforeEach(() => {
+      emailField = fixture('default');
+    });
+
+    afterEach(() => {
+      emailField.remove();
+    });
+
+    it('should fire a validated event on validation success', () => {
+      const validatedSpy = sinon.spy();
+      emailField.addEventListener('validated', validatedSpy);
+      emailField.validate();
+
+      expect(validatedSpy.calledOnce).to.be.true;
+      const event = validatedSpy.firstCall.args[0];
+      expect(event.detail.valid).to.be.true;
+    });
+
+    it('should fire a validated event on validation failure', () => {
+      const validatedSpy = sinon.spy();
+      emailField.addEventListener('validated', validatedSpy);
+      emailField.required = true;
+      emailField.validate();
+
+      expect(validatedSpy.calledOnce).to.be.true;
+      const event = validatedSpy.firstCall.args[0];
+      expect(event.detail.valid).to.be.false;
     });
   });
 </script>
