--- a/test/email-field-validation.html
+++ b/test/email-field-validation.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <test-fixture id="default">
+  <test-fixture id="basic">
     <template>
       <vaadin-email-field></vaadin-email-field>
     </template>
@@ -55,7 +55,7 @@
     let emailField;
 
     beforeEach(() => {
-      emailField = fixture('default');
+      emailField = fixture('basic');
     });
 
     it('should fire a validated event on validation success', () => {
