--- a/test/password-field-validation.html
+++ b/test/password-field-validation.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <test-fixture id="default">
+  <test-fixture id="basic">
     <template>
       <vaadin-password-field></vaadin-password-field>
     </template>
@@ -55,7 +55,7 @@
     let passwordField;
 
     beforeEach(() => {
-      passwordField = fixture('default');
+      passwordField = fixture('basic');
     });
 
     it('should fire a validated event on validation success', () => {
