--- a/test/email-field-validation.html
+++ b/test/email-field-validation.html
@@ -17,6 +17,11 @@
       <vaadin-email-field></vaadin-email-field>
     </template>
   </test-fixture>
+  <test-fixture id="should-set-invalid">
+    <template>
+      <vaadin-email-field></vaadin-email-field>
+    </template>
+  </test-fixture>
 <script>
   describe(`initial validation`, () => {
     let field, validateSpy;
@@ -77,6 +82,24 @@
       expect(validatedSpy.calledOnce).to.be.true;
       const event = validatedSpy.firstCall.args[0];
       expect(event.detail.valid).to.be.false;
+    });
+  });
+  describe('invalid cannot be set to false', () => {
+    let emailField;
+
+    beforeEach(async() => {
+      emailField = fixture('should-set-invalid');
+      emailField._shouldSetInvalid = (invalid) => invalid;
+      await nextRender();
+    });
+
+    it('should set invalid only when it is true', async() => {
+      emailField.required = true;
+      emailField.validate();
+      expect(emailField.invalid).to.be.true;
+      emailField.value = 'email@example.com';
+      emailField.validate();
+      expect(emailField.invalid).to.be.true;
     });
   });
 </script>
