--- a/test/number-field-validation.html
+++ b/test/number-field-validation.html
@@ -17,6 +17,11 @@
       <vaadin-number-field></vaadin-number-field>
     </template>
   </test-fixture>
+  <test-fixture id="should-set-invalid">
+    <template>
+      <vaadin-number-field></vaadin-number-field>
+    </template>
+  </test-fixture>
 <script>
   describe(`initial validation`, () => {
     let field, validateSpy;
@@ -77,6 +82,24 @@
       expect(validatedSpy.calledOnce).to.be.true;
       const event = validatedSpy.firstCall.args[0];
       expect(event.detail.valid).to.be.false;
+    });
+  });
+  describe('invalid cannot be set to false', () => {
+    let numberField;
+
+    beforeEach(async() => {
+      numberField = fixture('should-set-invalid');
+      numberField._shouldSetInvalid = (invalid) => invalid;
+      await nextRender();
+    });
+
+    it('should set invalid only when it is true', async() => {
+      numberField.required = true;
+      numberField.validate();
+      expect(numberField.invalid).to.be.true;
+      numberField.value = 5;
+      numberField.validate();
+      expect(numberField.invalid).to.be.true;
     });
   });
 </script>
