--- a/test/text-field-validation.html
+++ b/test/text-field-validation.html
@@ -17,6 +17,11 @@
       <vaadin-text-field></vaadin-text-field>
     </template>
   </test-fixture>
+  <test-fixture id="should-set-invalid">
+    <template>
+      <vaadin-text-field></vaadin-text-field>
+    </template>
+  </test-fixture>
 <script>
   describe(`initial validation`, () => {
     let field, validateSpy;
@@ -77,6 +82,25 @@
       expect(validatedSpy.calledOnce).to.be.true;
       const event = validatedSpy.firstCall.args[0];
       expect(event.detail.valid).to.be.false;
+    });
+  });
+  describe('invalid cannot be set to false', () => {
+    let textField;
+
+    beforeEach(async() => {
+      textField = fixture('should-set-invalid');
+      textField._shouldSetInvalid = (invalid) => invalid;
+      await nextRender();
+    });
+
+
+    it('should set invalid only when it is true', async() => {
+      textField.required = true;
+      textField.validate();
+      expect(textField.invalid).to.be.true;
+      textField.value = 'value';
+      textField.validate();
+      expect(textField.invalid).to.be.true;
     });
   });
 </script>
