--- a/test/email-field-validation.html
+++ b/test/email-field-validation.html
@@ -12,12 +12,7 @@
 </head>
 
 <body>
-  <test-fixture id="basic">
-    <template>
-      <vaadin-email-field></vaadin-email-field>
-    </template>
-  </test-fixture>
-  <test-fixture id="should-set-invalid">
+  <test-fixture id="email-field">
     <template>
       <vaadin-email-field></vaadin-email-field>
     </template>
@@ -60,7 +55,7 @@
     let emailField;
 
     beforeEach(() => {
-      emailField = fixture('basic');
+      emailField = fixture('email-field');
     });
 
     it('should fire a validated event on validation success', () => {
@@ -88,7 +83,7 @@
     let emailField;
 
     beforeEach(async() => {
-      emailField = fixture('should-set-invalid');
+      emailField = fixture('email-field');
       emailField._shouldSetInvalid = (invalid) => invalid;
       await nextRender();
     });
