--- a/test/integer-field-validation.html
+++ b/test/integer-field-validation.html
@@ -12,12 +12,7 @@
 </head>
 
 <body>
-  <test-fixture id="basic">
-    <template>
-      <vaadin-integer-field></vaadin-integer-field>
-    </template>
-  </test-fixture>
-  <test-fixture id="should-set-invalid">
+  <test-fixture id="integer-field">
     <template>
       <vaadin-integer-field></vaadin-integer-field>
     </template>
@@ -60,7 +55,7 @@
     let integerField;
 
     beforeEach(() => {
-      integerField = fixture('basic');
+      integerField = fixture('integer-field');
     });
 
     it('should fire a validated event on validation success', () => {
@@ -88,7 +83,7 @@
     let integerField;
 
     beforeEach(async() => {
-      integerField = fixture('should-set-invalid');
+      integerField = fixture('integer-field');
       integerField._shouldSetInvalid = (invalid) => invalid;
       await nextRender();
     });
