--- a/test/password-field-validation.html
+++ b/test/password-field-validation.html
@@ -12,12 +12,7 @@
 </head>
 
 <body>
-  <test-fixture id="basic">
-    <template>
-      <vaadin-password-field></vaadin-password-field>
-    </template>
-  </test-fixture>
-  <test-fixture id="should-set-invalid">
+  <test-fixture id="password-field">
     <template>
       <vaadin-password-field></vaadin-password-field>
     </template>
@@ -60,7 +55,7 @@
     let passwordField;
 
     beforeEach(() => {
-      passwordField = fixture('basic');
+      passwordField = fixture('password-field');
     });
 
     it('should fire a validated event on validation success', () => {
@@ -88,7 +83,7 @@
     let passwordField;
 
     beforeEach(async() => {
-      passwordField = fixture('should-set-invalid');
+      passwordField = fixture('password-field');
       passwordField._shouldSetInvalid = (invalid) => invalid;
       await nextRender();
     });
