--- a/test/text-area-validation.html
+++ b/test/text-area-validation.html
@@ -12,12 +12,7 @@
 </head>
 
 <body>
-  <test-fixture id="basic">
-    <template>
-      <vaadin-text-area></vaadin-text-area>
-    </template>
-  </test-fixture>
-  <test-fixture id="should-set-invalid">
+  <test-fixture id="text-area">
     <template>
       <vaadin-text-area></vaadin-text-area>
     </template>
@@ -60,7 +55,7 @@
     let textArea;
 
     beforeEach(() => {
-      textArea = fixture('basic');
+      textArea = fixture('text-area');
     });
 
     it('should fire a validated event on validation success', () => {
@@ -88,7 +83,7 @@
     let textArea;
 
     beforeEach(async() => {
-      textArea = fixture('should-set-invalid');
+      textArea = fixture('text-area');
       textArea._shouldSetInvalid = (invalid) => invalid;
       await nextRender();
     });
