--- a/test/text-field-validation.html
+++ b/test/text-field-validation.html
@@ -12,12 +12,7 @@
 </head>
 
 <body>
-  <test-fixture id="basic">
-    <template>
-      <vaadin-text-field></vaadin-text-field>
-    </template>
-  </test-fixture>
-  <test-fixture id="should-set-invalid">
+  <test-fixture id="text-field">
     <template>
       <vaadin-text-field></vaadin-text-field>
     </template>
@@ -60,7 +55,7 @@
     let textField;
 
     beforeEach(() => {
-      textField = fixture('basic');
+      textField = fixture('text-field');
     });
 
     it('should fire a validated event on validation success', () => {
@@ -88,7 +83,7 @@
     let textField;
 
     beforeEach(async() => {
-      textField = fixture('should-set-invalid');
+      textField = fixture('text-field');
       textField._shouldSetInvalid = (invalid) => invalid;
       await nextRender();
     });
